--- a/granary/foreshadowing.mkd
+++ b/granary/foreshadowing.mkd
@@ -4,8 +4,38 @@ things that should be mentioned in the ET paper.
 - how to combine the power of Kali Linux with the portability and low cost of a Raspberry Pi.
 - used the portability of the Raspberry Pi to test security assessment covertly at different locations, and have configured the Raspberry Pi to be managed remotely with little footprint.
 
+## Raspberry Pi - 2nd Edition 
+- There are very popular options out there such as, Arduino, Banana Pi, and even Intel with its newly announced Joule board. PORÓWNANIE INNYCH SBC
+
 ##LAF:
 paper: A passive user-side solution for evil twin access point detection at public hotspots
 - An evil twin is a kind of rogue APs. [...]
 - 4.4 | Comparisons with other work
 - takich testów jak oni nie przeprowadzimy :C
+
+## Covering tracks
+- tunneling
+- ssh, all the tools in the 2nd Chapter Penetration Testing with Raspberry Pi - Second Edition
+
+## Other books:
+- Kali Linux - Assuring Security by Penetration Testing , Packt Publishing (by Tedi Heriyanto, Lee Allen, and Shakeel Ali)
+
+## Turning WiFi interface to monitor mode
+```
+$ sudo ip link set IFACE down
+$ sudo iw IFACE set monitor control
+$ sudo ip link set IFACE up
+# to check run:
+$ sudo iw dev
+```
+opisać wybór karty sieciowej: 
+stare - TP-LINK mają chipset **Qualcomm Atheros Communications AR9271 802.11n** i driver **ath9k_htc** z włączoną możliwością przejścia w *monitor mode*.
+nowe - TP-LINK mają chipset **TP-Link TL-WN722N v2/v3 Realtek RTL8188EUS** i driver rtl8188eu, który nie ma możliwości włączenia *monitor mode* i karta może być używana wyłacznie w *managed mode*.
+
+
+## Password Cracking
+```
+crunch [min char] [max char] {char set] | aircrack-ng -e [SSID Name] -w -/[location & name to store the capture]
+Crunch 8 8 abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQR STUVWXYZ0123456789 | aircrack-ng -e PENTEST_NET -w - rootDesktop/WPA_Crack-01.cap
+```
+Osiąga temperatury ~85C. ~250 słów/sekunde, przy ~50C. ~300 słów/sekunde
